Update for Patch v3.14.15 - checksum: dee9

--- a/mod/thmod/localisation/english/ancient_relics_l_english.yml
+++ b/mod/thmod/localisation/english/ancient_relics_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
+ ANCIENT_RELICS_TITLE: "Ancient Relics Story Pack"
  minor_artifacts:0 "ศิลปวัตถุชั้นรอง"
  minor_artifacts_desc:1 "ศิลปวัตถุชั้นรอง ( £minor_artifacts£ ) เป็นตัวแทนของเทคโนโลยีอารยธรรมโบราณที่คลุมเครือซึ่งได้รับการกู้คืนโดยวิทยาศาสตร์ของเราและเรามีความเข้าใจเพียงบางส่วนเท่านั้น พวกมันมีอยู่ทั่วไปโดยมีมากกว่าวัตถุโบราณชิ้นสำคัญและสามารถใช้เพื่อเพิ่มเอฟเฟกต์ต่างๆต่อจักรวรรดิได้"
  artifact_actions:0 "การดำเนินการเกี่ยวกับศิลปวัตถุชั้นรอง"
@@ -176,7 +177,7 @@
  SECTOR_RESOURCE_MONTHLY_TRANSFER:0 "ถ่ายโอนรายเดือนไปยังคลังทรัพยากรที่ใช้ร่วมกัน"
  SECTOR_RESOURCE_TRANSFER_AMOUNT_LABEL:0 "+$AMOUNT|*0$"
  MESSAGE_ARCHAEOLOGY_SITE_FINISHED_TITLE:0 "การขุดค้นโบราณสถานเสร็จแล้ว"
- MESSAGE_ARCHAEOLOGY_SITE_FINISHED_DESC:0 "โบราณสถานในจักรวรรดิของเราถูกขุดค้นจนหมดแล้ว"
+ MESSAGE_ARCHAEOLOGY_SITE_FINISHED_DESC:0 "เราได้ขุดค้นแหล่งโบราณคดีจนเสร็จสมบูรณ์แล้ว"
  MESSAGE_ARCHAEOLOGY_STAGE_FINISHED_TITLE:0 "Archaeological Site Progress"
  MESSAGE_ARCHAEOLOGY_STAGE_FINISHED_DESC:0 "We have unlocked the next stage of an archaeological site"
  MESSAGE_ARCHAEOLOGY_SITE_DISCOVERED_TITLE:0 "ค้นพบแหล่งโบราณคดี"
@@ -197,6 +198,7 @@
  ARCHAEOLOGICAL_SITE_MAPICON_TT:0 "$NAME|H$\n$DESC$\n\n§Gคลิกเพื่อดูแหล่งโบราณคดี§!"
  CANNOT_EXCAVATE_OUTSIDE_EMPIRE_BORDERS:0 "$TRIGGER_FAIL$§Rไม่สามารถขุดค้นแหล่งโบราณคดีนอกจักรวรรดิของคุณได้§!"
  CANNOT_EXCAVATE_WITHOUT_VALID_LEADER:0 "$TRIGGER_FAIL$§Rไม่สามารถขุดค้นแหล่งโบราณคดีโดยที่ไม่มีผู้นำได้§!"
+ ALREADY_BEING_EXCAVATED_BY_OTHERS: "$TRIGGER_FAIL$§Rแหล่งโบราณคดีแห่งนี้กำลังถูกขุดค้นโดยจักรวรรดิอื่นอยู่§!"
  ARC_DIFFICULTY_TYPE:0 "ความยาก"
  ARC_DIFFICULTY_TYPE_DESC:0 "Each chapter in an archaeological site can have a different difficulty value. Difficulty will reduce the likelihood of getting successful results at the end of an excavation phase."
  ARC_DIFFICULTY_TYPE_TT:0 "§H$ARC_DIFFICULTY_TYPE$§!\n$VALUE$\n\n$ARC_DIFFICULTY_TYPE_DESC$"
@@ -396,7 +398,7 @@
  artifact_cultural_study_effect:1 "$decision_museum_exhibits_desc$\n\n$artifact_action_planetary_decision$"
  artifact_action_planetary_decision:0 "This action must be performed as a §YDecision§! on a planet."
  decision_museum_exhibits:0 "ส่งสิ่งศิลปวัตถุไปยังนิทรรศการในพิพิธภัณฑ์"
- decision_museum_exhibits_desc:0 "Put the minor artifacts on public display to inspire our people with the wonders of the past."
+ decision_museum_exhibits_desc:0 "Put the £minor_artifacts£Minor Artifacts on public display to inspire our people with the wonders of the past."
  planet_museum_exhibits:0 "นิทรรศการศิลปวัตถุ"
  planet_museum_exhibits_desc:0 "The display of alien artifacts reinvigorates our museum exhibits."
  artifact_manager_awards:1 "การแข่งขันด้านประสิทธิภาพ §E(การตัดสินใจของดาวเคราะห์)§!"
@@ -410,7 +412,7 @@
  artifact_sanctuary_exhibits_desc:0 "The $decision_sanctuary_exhibits$ decision entertains the Bio-Trophies on one of our planets."
  artifact_sanctuary_exhibits_effect:1 "$decision_sanctuary_exhibits_desc$\n\n$artifact_action_planetary_decision$"
  decision_sanctuary_exhibits:0 "ส่งศิลปวัตถุไปยังเขตรักษาพันธุ์สิ่งมีชีวิต"
- decision_sanctuary_exhibits_desc:0 "Put the minor artifacts on public display to entertain our $job_bio_trophy_plural$ with the wonders of the past."
+ decision_sanctuary_exhibits_desc:0 "Put the £minor_artifacts£Minor Artifacts on public display to entertain our $job_bio_trophy_plural$ with the wonders of the past."
  planet_sanctuary_exhibits:0 "นิทรรศการศิลปวัตถุ"
  planet_sanctuary_exhibits_desc:0 "The display of alien artifacts is all our $job_bio_trophy_plural$ are talking about!"
  mod_planet_executives_produces_mult:0 "ผลผลิตของ £job_executive£ $job_executive_plural$"
