--- a/mod/thmod/localisation/english/cosmic_storms_l_english.yml
+++ b/mod/thmod/localisation/english/cosmic_storms_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
+ COSMIC_STORMS_TITLE: "Cosmic Storms"
  EMPIRE_DESIGN_YATUNAN_RADICALS: "Yatunan Radicals"
  PRESCRIPTED_adjective_yatunan_radicals: "Yatunan"
  PRESCRIPTED_ship_prefix_yatunan_radicals: "RAD"
@@ -192,7 +193,7 @@
  job_storm_dancer_effect_desc: "$job_storm_dancer_plural$ turn $r_consumer_goods$ into $r_unity$ and $r_amenities$"
  job_storm_dancer_with_icon: "£job_storm_dancer£ $job_storm_dancer$"
  job_storm_dancer_plural_with_icon: "£job_storm_dancer£ $job_storm_dancer_plural$"
- count_system_within_storm_trigger: "count_system_within_storm_trigger"
+ count_system_within_storm_trigger: "Number of systems within storm$CONDITIONS$ $IS_NOT$ $COMPARATOR$ $NUM|Y$"
  STORM_RANGE_TRIGGER: "$TYPE$ has min range of $MIN_RANGE$ and max range of $MAX_RAMGE$"
  IS_COSMIC_STORM: "ชนิดของพายุคอสมิกคือ $TYPE|Y$"
  IS_NOT_COSMIC_STORM: "ชนิดของพายุคอสมิก ไม่เป็น$TYPE|Y$"
@@ -463,6 +464,8 @@
  cstorms.5090.b.default: "Nature is cruel."
  cstorms.5090.b.machine: "Begin extermination protocols."
  cstorms.5090.b.swarm: "A free meal."
+ cstorms.5090.c: "Give them a new home."
+ cstorms.5090.c.tt: "Add 3 §Y$NAME_Tiyanki_Hatchling$§! of random rarity to your ['concept_vivarium']"
  REUNITE_POD_PROJECT: "Reuniting the Pod"
  REUNITE_POD_PROJECT_DESC: "Three Tiyanki calves are lost and wandering [this.solar_system.GetName] separated from their pod by a cosmic storm. We can help reunite them with their pod by boosting their cries to attract the rest of their pod to the system."
  cstorms.5095.name: "Tiyanki Reunited"
@@ -1021,9 +1024,9 @@
  cs_storm_chasers_storm_fruition_desc: "The awakening of our own personal cosmic storm has amped our people for years to come."
  cs_storm_chasers_storm_fruition_gestalt: "$cs_storm_chasers_storm_fruition$"
  cs_storm_chasers_storm_fruition_gestalt_desc: "The awakening of our own personal cosmic storm has amped our consciousness for years to come."
- cs_storm_chasers_homeworld_storm_attraction: "Extreme Weather"
+ cs_storm_chasers_homeworld_storm_attraction: "สภาพอากาศเลวร้าย"
  cs_storm_chasers_homeworld_storm_attraction_desc: "This planet's relentless storms have driven its lifeforms into two distinct paths: those who seek shelter from the chaos, and those who revel in the thrill of the tempest."
- cs_storm_chasers_homeworld_storm_attraction_tt: "ความแรงของการดึงดูด §Y$default_storm$§!: §PLow§!"
+ cs_storm_chasers_homeworld_storm_attraction_tt: "ความแรงของการดึงดูด §Y$default_storm$§!: §Pต่ำ§!"
  PROJECT_TEMPEST_BREWING: "การตั้งเค้าของพายุ"
  PROJECT_TEMPEST_BREWING_DESC: "This once-in-a-lifetime storm system on [Owner.Capital.GetName] has special properties that make it ripe for modulation. But first, we'll need to better understand its underlying composition. Who knows what brilliant oddity we may bring to life?"
  cstorms.3100.name: "Stormfall"
@@ -1032,7 +1035,7 @@
  cstorms.3105.name: "Tempest Brewing"
  cstorms.3105.desc: "Our [Root.Owner.GetScientistPlural] have discovered the secrets of storm manipulation. The storm power projections are off the charts and we're all here for it. We will be tested and found most worthy.\n\nSpecial buildings can serve as coordination centers for raising storms. A building on §Y[owner.capital_scope.GetName]§! that increases storm attraction will accelerate our progress towards the ultimate storm."
  cstorms.3105.a: "Groovy."
- cstorms.3105.a.tt: "§Ystorm attraction building§! บนดาวเคราะห์ศูนย์กลาง:\n$situation_speed_tt$: §G+10%§!\n\nA §Y$sm_storm_attraction_computer$§! ในสถานีระบบดาวเคราะห์ศูนย์กลาง:\n$situation_speed_tt$: §G+10%§!\n\n"
+ cstorms.3105.a.tt: "§Ystorm attraction building§! บนดาวเคราะห์ศูนย์กลางจักรวรรดิ:\n$situation_speed_tt$: §G+10%§!\n\nA §Y$sm_storm_attraction_computer$§! ในสถานีระบบดาวเคราะห์ศูนย์กลางจักรวรรดิ:\n$situation_speed_tt$: §G+10%§!\n\n"
  cstorms.3110.name: "The Advent"
  cstorms.3110.desc.outro: "By injecting energy into the natural storms, we can generate the conditions for electric storms.\n\nPlanetary core manipulation could reorient the magnetic field of [owner.capital_scope.GetName] to give rise to magnetic storms.\n\nFinally, by reversing the tachyon polarity at specific planetary sites, field changes can produce gravity storms."
  cstorms.3110.desc.regular: "We have learned how to kickstart the tempestuous vibrations of [owner.capital_scope.GetName], shaping them into the ultimate experience. But we must decide which storm type is the most glorious.\n\n$cstorms.3110.desc.outro$"
@@ -1352,8 +1355,8 @@
  cosmic_storm_influence_moderate: "ปานกลาง"
  cosmic_storm_influence_high: "สูง"
  cosmic_storm_influence_neutral: "กลางๆ"
- cosmic_storm_attraction_computer_tt: "ความแรงของการดึงดูด §Y$default_storm$§!: §Pสูง§! "
- cosmic_storm_repellent_computer_tt: "ความแรงของการผลักดัน §Y$default_storm$§!: §Cสูง§! "
+ cosmic_storm_attraction_computer_tt: "ความแรงของการดึงดูด §Y$default_storm$§!: §Pสูง§!"
+ cosmic_storm_repellent_computer_tt: "ความแรงของการผลักดัน §Y$default_storm$§!: §Cสูง§!"
  building_cosmic_storm_attraction_center_tt: "ความแรงของการดึงดูด §Y$default_storm$§!: §Pต่ำ§!"
  building_cosmic_storm_repellent_center_tt: "ความแรงของการผลักดัน §Y$default_storm$§!: §Cต่ำ§!"
  building_cosmic_storm_advanced_attraction_center_tt: "ความแรงของการดึงดูด §Y$default_storm$§!: §Pปานกลาง§!"
@@ -1471,9 +1474,9 @@
  CLEAR_DUSTY_PIPES_PROJECT: "Clear the Pipes"
  CLEAR_DUSTY_PIPES_PROJECT_DESC: "The impact of a §Y$celestial_storm$§! on §H[this.GetName]§! has left water filtration systems clogged with an insoluble mineral slurry. We must re-engineer a more robust filtration system to address the issue."
  cstorms.1765.name: "Filters Unclogged"
- cstorms.1765.desc: "Engineers have dealt with the hydroponic blockages and water shortages on §H[this.GetName]§!. The colony's water supply network has been improved and can now filter out complex impurities such as those introduced by the $celestial_storm$.\n\nThese improvements to our water infrastructure can be repurposed to improve irrigation efforts across the [Owner.GetName]."
+ cstorms.1765.desc: "The [Owner.GetEngineerPlural] have dealt with the hydroponic blockages and water shortages on §H[this.GetName]§!. The colony's water supply network has been improved and can now filter out complex impurities such as those introduced by the $celestial_storm$.\n\nThese improvements to our water infrastructure can be repurposed to improve irrigation efforts across the [Owner.GetName]."
  cstorms.1771.name: "Cosmic Clogging"
- cstorms.1771.desc.common: "Scientists on [this.GetName] have observed harsh repercussions of the §Y$gravity_storm$§! on the local avian wildlife.\n\nThe gravitational fluctuations brought on by the storm are leading to erratic atmospheric conditions, rendering several species of avian fauna incapable of flight."
+ cstorms.1771.desc.common: "The [Owner.GetScientistPlural] on [this.GetName] have observed harsh repercussions of the §Y$gravity_storm$§! on the local avian wildlife.\n\nThe gravitational fluctuations brought on by the storm are leading to erratic atmospheric conditions, rendering several species of avian fauna incapable of flight."
  cstorms.1771.desc.default: "Not only is this preventing the creatures unable to hunt as normal, it is also leaving them vulnerable to predators.\n\nThere is concern that the afflicted species may be hunted to extinction if we do not intervene."
  cstorms.1771.desc.swarm: "A veritable feast awaits us."
  cstorms.1771.a: "Easy Prey."
