--- a/mod/thmod/localisation/english/event_chains_l_english.yml
+++ b/mod/thmod/localisation/english/event_chains_l_english.yml
@@ -41,9 +41,9 @@
  survey_habitable_worlds_chain_title:0 "การสำรวจดาวที่สามารถอยู่อาศัยได้"
  survey_habitable_worlds_chain_desc:0 "นักชีววิทยาต่างดาวของเราเร่งให้เราสำรวจดาวต่างๆที่ยังมีชีวบริเวณ(ส่วนของพื้นผิวและบรรยากาศของดาวที่มีสิ่งมีชีวิตอาศัยอยู่) พวกเขากระตือรือร้นที่จะเรียนรู้เพิ่มเติมเกี่ยวกับระบบนิเวศของมนุษย์ต่างดาวอันหลากหลายที่พบได้ทั่วกาแล็กซี"
  habitable_worlds_surveyed:0 "สำรวจดาวที่สามารถอยู่อาศัยได้ไปแล้ว"
- specimen_procurement_chain_title:0 "การหาตัวอย่างต่างดาว"
+ specimen_procurement_chain_title:0 "การหาสิ่งมีชีวิตต่างดาว"
  specimen_procurement_chain_desc:0 "พิพิธภัณฑ์ชีววิทยานอกพิภพที่้ [Root.Capital.GetName] ได้ขอความช่วยเหลือ ในการรวบรวมตัวอย่างสิ่งมีชีวิต ต่างดาวหายากหลายแบบ ที่ถูกระบุบนดาวที่แตกต่างกัน"
- specimens_collected:0 "เก็บตัวอย่างมาแล้ว"
+ specimens_collected:0 "เก็บสิ่งมีชีวิตมาแล้ว"
  radical_cult_title:0 "[radical_cult.GetName]"
  radical_cult_desc:0 "สมาชิกของลัทธิหัวรุนแรงที่เรียกตัวเองว่า "[radical_cult.GetName]" กำลังพยายามบ่อนทำลายรัฐบาล ของเราและล้มล้างประชานิยมให้หันมานับถือศาสนาที่บิดเบี้ยวของพวกเขา หลังจากใช้เวลาหลายศตวรรษในการสร้างความแข็งแกร่งของพวกเขาที่[Root.Capital.GetName] ตอนนี้ผู้นำของพวกเขาได้หนีไปในอวกาศเพื่อทำสงครามศาสนากับพวกเราต่อไป"
  survey_home_system_title:0 "Survey Home System"
