--- a/mod/thmod/localisation/english/federations_l_english.yml
+++ b/mod/thmod/localisation/english/federations_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
+ FEDERATIONS_TITLE: "Federations"
  IS_YOU:1 "นี่คือคุณ"
  ORIGIN:0 "จุดเริ่มต้น"
  EMPIRE_ORIGIN:0 "$ORIGIN$"
@@ -373,13 +374,13 @@
  law_category_fleet_contribution:0 "การมีส่วนร่วมของกองยาน"
  law_category_fleet_contribution_desc:0 "These Laws determine how much Naval Capacity our Members give up for the Federation Navy."
  fleet_contribution_none:0 "ไม่มี"
- fleet_contribution_none_desc:0 "This federation has no collaborative military effort."
+ fleet_contribution_none_desc:0 "ไม่มีความร่วมมือทางการทหาร"
  fleet_contribution_low:0 "ต่ำ"
- fleet_contribution_low_desc:0 "This federation has a minor collaborative military effort."
+ fleet_contribution_low_desc:0 "มีความร่วมมือทางการทหารน้อย"
  fleet_contribution_medium:0 "ปานกลาง"
- fleet_contribution_medium_desc:0 "This federation has a moderate collaborative military effort."
+ fleet_contribution_medium_desc:0 "มีความร่วมมือทางการทหารปานกลาง"
  fleet_contribution_high:0 "สูง"
- fleet_contribution_high_desc:0 "This federation has an extensive collaborative military effort."
+ fleet_contribution_high_desc:0 "มีความร่วมมือทางการทหารสูง"
  fleet_contribution_low_effect:0 "สมาชิกโอนความจุยานรบของพวกเขา §Y10%§! ไปยังสหพันธ์"
  fleet_contribution_medium_effect:0 "สมาชิกโอนความจุยานรบของพวกเขา §Y20%§! ไปยังสหพันธ์"
  fleet_contribution_high_effect:0 "สมาชิกโอนความจุยานรบของพวกเขา §Y30%§! ไปยังสหพันธ์"
@@ -1622,6 +1623,9 @@
  decision_shattered_ring_project:0 "Repair the Shattered Ring"
  decision_shattered_ring_project_desc:0 "This world has been broken for untold ages, and it is time to right this wrong. We will restore the ring's advanced facilities."
  decision_shattered_ring_project_effects:0 "เปลี่ยน $pc_shattered_ring_habitable$ เป็น §Y$pc_ringworld_habitable$§! เพื่อปลดล็อก £district£ §Yเขตเซ็กเมนต์§! พิเศษ"
+ decision_shattered_ring_project_interloper: "Remove the Interloper"
+ decision_shattered_ring_project_interloper_desc: "The Interloper once ruined our perfect ring. We could now use it to repair the megastructure."
+ decision_shattered_ring_project_interloper_effects: "Removes the §YInterloper§! and turns §Y$NAME_Irreparable_Damage$§! into a §Y$pc_ringworld_habitable$§!"
  col_bureau:2 "ศูนย์ราชการ"
  col_bureau_desc:4 "ให้ดาวดวงนี้กลายเป็นศูนย์กลางราชการ"
  col_bureaucracy_custom:1 "ความสามารถในการบริหารจากราชการเพิ่มขึ้น §G2§!\nค่าบำรุงรักษาของอาชีพข้าราชการลดลง §G10%§!\n£pop£ ประชากรมีโอกาสเปลี่ยนแปลงจริยธรรมลดลง §G20%§!"
