--- a/mod/thmod/localisation/english/hud_tutorial_l_english.yml
+++ b/mod/thmod/localisation/english/hud_tutorial_l_english.yml
@@ -7,8 +7,8 @@
  RESOURCE_PANEL_DESC:0 "In this panel you can see all the relevant resources of your Empire."
  MENU_PANEL_TITLE:0 "Menu Panel"
  MENU_PANEL_DESC:1 "In this panel you can access all the primary menus, such as Technology, Traditions, Policies and the Ship Designer."
- GOVERNMENT_VIEW_TITLE:0 "Government View"
- GOVERNMENT_VIEW_DESC:1 "This opens your government view, giving you a general overview of your Empire."
+ GOVERNMENT_VIEW_TITLE:0 "Empire View"
+ GOVERNMENT_VIEW_DESC:1 "This opens your Empire View, giving you a general overview of your Empire."
  GALAXY_VIEW_TITLE:0 "Galaxy View"
  GALAXY_VIEW_DESC:1 "The galaxy view provides an overview of the galaxy and your Empire within it. It is recommended for most of your interactions."
  TUTORIAL_MISSION_VIEW_TITLE:0 "Missions"
