--- a/mod/thmod/localisation/english/l_english.yml
+++ b/mod/thmod/localisation/english/l_english.yml
@@ -537,7 +537,7 @@
  ENABLED: "เปิด"
  DISABLED: "ปิด"
  START_GAME:0 "เริ่มเกม"
- SHIPDESIGNER:0 "ออกแบบยาน"
+ SHIP_DESIGNER:0 "ออกแบบยาน"
  FLEETDESIGNER:0 "ออกแบบยาน"
  SAVING:0 "กำลังบันทึก"
  OPEN:0 "เปิด"
@@ -1529,7 +1529,7 @@
  DIFFICULTY_COMMODORE_DESC:1 "AI ได้รับโบนัสปานกลางในด้านเศรษฐกิจ การวิจัยและขีดจำกัดของยานรบ"
  DIFFICULTY_ADMIRAL_DESC:1 "AI ได้รับโบนัสอย่างมากในด้านเศรษฐกิจ การวิจัยและขีดจำกัดของยานรบ"
  DIFFICULTY_GRAND_ADMIRAL_DESC:1 "AI ได้รับโบนัสอย่างมโหฬารในด้านเศรษฐกิจ การวิจัยและขีดจำกัดของยานรบ"
- FE_DIFFICULTY_TOOLTIP:7 "สิ่งนี้ควบคุมความยากของเกม\n\nความยากที่มีอยู่คือ:\n- §Y$DIFFICULTY_CIVILIAN$§!: $DIFFICULTY_CIVILIAN_DESC$\n- §Y$DIFFICULTY_CADET$§!: $DIFFICULTY_CADET_DESC$\n- §Y$DIFFICULTY_ENSIGN$§!: $DIFFICULTY_ENSIGN_DESC$\n- §Y$DIFFICULTY_CAPTAIN$§!: $DIFFICULTY_CAPTAIN_DESC$\n- §Y$DIFFICULTY_COMMODORE$§!: $DIFFICULTY_COMMODORE_DESC$\n- §Y$DIFFICULTY_ADMIRAL$§!: $DIFFICULTY_ADMIRAL_DESC$\n- §Y$DIFFICULTY_GRAND_ADMIRAL$§!: $DIFFICULTY_GRAND_ADMIRAL_DESC$"
+ FE_DIFFICULTY_TOOLTIP:7 "§Hความยาก§!\nสิ่งนี้ควบคุมความยากของเกม\n\nความยากที่มีอยู่คือ:\n- §Y$DIFFICULTY_CIVILIAN$§!: $DIFFICULTY_CIVILIAN_DESC$\n- §Y$DIFFICULTY_CADET$§!: $DIFFICULTY_CADET_DESC$\n- §Y$DIFFICULTY_ENSIGN$§!: $DIFFICULTY_ENSIGN_DESC$\n- §Y$DIFFICULTY_CAPTAIN$§!: $DIFFICULTY_CAPTAIN_DESC$\n- §Y$DIFFICULTY_COMMODORE$§!: $DIFFICULTY_COMMODORE_DESC$\n- §Y$DIFFICULTY_ADMIRAL$§!: $DIFFICULTY_ADMIRAL_DESC$\n- §Y$DIFFICULTY_GRAND_ADMIRAL$§!: $DIFFICULTY_GRAND_ADMIRAL_DESC$"
  FE_IRONMAN:0 "โหมดไอรอนแมน"
  FE_IRONMAN_TOOLTIP:1 "§HIronman Mode§!\nIn Ironman mode, console commands are disabled and the game is automatically saved regularly to a single file. In games played with this setting, there is no turning back.\n\nTo be eligible for achievements, Ironman mode must be enabled."
  FE_EMPIRES_TOOLTIP:1 "§Hจำนวนของจักรวรรดิ AI§!\nสิ่งนี้ควบคุมจำนวน จักรวรรดิที่ควบคุมโดย AI ในกาแล็กซี"
@@ -1641,7 +1641,7 @@
  DESIGN_IS_UPGRADING:0 "§Rการออกแบบนี้ไม่สามารถเปลี่ยนแปลงได้ในขณะที่ $FLEET|Y$ กำลังอัปเกรด§!"
  SECTORS_INCOME:0 "เซ็กเตอร์:"
  HUMANS_SUMMARY_DESC:0 "ผู้เล่นพร้อม"
- HUMANS_SUMMARY:1 "  $READY$ / $PLAYERS$ "
+ HUMANS_SUMMARY: "พร้อม $READY$ / $PLAYERS$"
  CANNOT_AFFORD:0 "Cannot Afford"
  SECTOR_ENERGY_STOCKPILE:0 "Energy Credits Stockpile"
  SECTOR_ENERGY_STOCKPILE_DESC:0 "This is the amount of stored Energy Credits in the Sector. It is automatically used for Upkeep."
@@ -1813,7 +1813,7 @@
  COUNTRY_FLAG_TOOLTIP_LEFT_CLICK_OWN_FLAG:0 "§Gคลิกเพื่อเปิด$GOVERNMENT_VIEW$§!"
  COUNTRY_FLAG_TOOLTIP_LEFT_CLICK_OWN_SYSTEM:0 "§Gคลิกเพื่อสลับระหว่างอาณานิคมใน $SYSTEM$§!"
  CLICK_TO_EDIT_SECTOR:0 "§Gคลิกเพื่อแก้ไขเซ็กเตอร์ $SECTOR$§!"
- EDIT_SECTOR_BUTTON:0 "§Hแก้ไขเซ็กเตอร์§!\nคลิกเพื่อเข้าสู่โหมดแก้ไขเซ็กเตอร์ คุณสามารถเพิ่มหรือลบเส้นขอบได้อย่างอิสระภายในระยะ §Y4§! ช่วงกระโดดจากศูนย์กลางของเซ็กเตอร์ "
+ EDIT_SECTOR_BUTTON:0 "§Hแก้ไขเซ็กเตอร์§!\nคลิกเพื่อเข้าสู่โหมดแก้ไขเซ็กเตอร์ คุณสามารถเพิ่มหรือลบเส้นขอบได้อย่างอิสระภายในระยะ §Y$MAX_JUMPS$§! ช่วงกระโดดจากศูนย์กลางของเซ็กเตอร์ "
  EDIT_SECTOR_BUTTON_DISABLED:0 "§Hแก้ไขเซ็กเตอร์§!\n§Rไม่อยู่ในเซ็กเตอร์§!"
  COUNTRY_FLAG_TOOLTIP_RIGHT_CLICK:1 "§Gคลิกขวาเพื่อไปยัง $HOME|H$ (ระบบดาวบ้านเกิด)§!"
  EVENT_OPTION_EFFECT_DESC:0 "$NAME|H$:\n--------------\n$EFFECTS$"
@@ -1826,6 +1826,7 @@
  WORLD_GFX:0 "WorldGfx: $WORLD|H$"
  GOTO_HOME:0 "§Hไปที่บ้าน§!\n§Gคลิกเพื่อไปยังตำแหน่งระบบดาวบ้านเราอย่างรวดเร็ว§!"
  SYSTEM_TEXT:0 "$SYSTEM|E$"
+ TOOLTIP_GAL_OBJ_STATION_ICON_PLURAL: "$CLASS|H$\n$OWNERS|Y$ มีอย่างน้อยหนึ่ง $CLASS$ ในระบบนี้\n"
  TOOLTIP_GAL_OBJ_STATION_ICON:1 "$CLASS|H$\n$OWNERS|Y$ มีอย่างน้อยหนึ่ง $CLASS$ ในระบบดาวนี้\n"
  TOOLTIP_GAL_OBJ_STATIONS_ICON:0 "$CLASS|H$\nFollowing Empires have $CLASS$s in this system:\n$OWNERS|Y$"
  TOOLTIP_GAL_OBJ_STATION_UNCLAIMED:0 "$CLASS|H$\nระบบนี้มี$CLASS$ที่ไม่มีการอ้างสิทธิ์อย่างน้อยหนึ่งอย่าง"
@@ -1947,6 +1948,8 @@
  tc_loyalty_desc:0 "เพิ่มหรือลดความภักดีของบริวาร"
  tc_open_borders:1 "$TRADE_CATEGORY_OPEN_BORDERS$"
  tc_open_borders_desc:0 "Grant different types of border access."
+ tc_specimens: "$specimens$"
+ tc_specimens_desc: "Transfer displayable Specimens to the other party."
  TRADE_ITEM_GIFT_RESOURCE_DESC:0 "Sends a sum of $RESOURCE$ immediately when the deal is accepted."
  TRADE_ITEM_MONTHLY_PAYMENT_RESOURCE_DESC:0 "Transfers a set amount of $RESOURCE$ to the other party every month for the duration of the deal. $RESOURCE$ to be sent next month are reserved immediately."
  TRADE_ITEM_HOLD_KEYS:1 "§Gกด £ctrl£ ค้างไว้แล้วคลิก ค่าจะลด/เพิ่มทีละ 10\nกด £shift£ ค้างไว้แล้วคลิก ค่าจะลด/เพิ่มทีละ 100\nกด £ctrl£ -£shift£ ค้างไว้แล้วคลิก ค่าจะลด/เพิ่มทีละ 1000§!"
@@ -1992,6 +1995,7 @@
  TRADE_NOT_OWNER_OF_LEADER:0 "$COUNTRY$ cannot trade away the leader $LEADER$"
  TRADE_NOT_OWNER_OF_FLEET:0 "$COUNTRY$ cannot trade away the fleet $FLEET$"
  TRADE_ACTION_NOT_POSSIBLE:0 "$COUNTRY$ cannot perform the action $ACTION$"
+ TRADE_SPECIMEN_NOT_POSSIBLE: "$COUNTRY$ sold a specimen proposed in the trade"
  TRADE_LACKING_RESOURCES:0 "$COUNTRY|H$ cannot trade away resources"
  TRADE_LACKING_STRATEGIC_RESOURCES:0 "$COUNTRY|H$ cannot trade away strategic resources"
  TRADE_SAME_RESOURCES:0 "Cannot propose a trade deal where both sides are trading away $RESOURCE|Y$."
@@ -2831,6 +2835,16 @@
  starburst:0 "ดาวกระจาย"
  cartwheel:0 "กงเกวียน"
  spoked:0 "ซี่ล้อรถ"
+ GALAXY_SHAPE_ELLIPTICAL_DESC: "§I$elliptical$:§! A simple round galaxy of evenly distributed stars."
+ GALAXY_SHAPE_RING_DESC: "§I$ring$:§! A round galaxy with more space around the galactic core."
+ GALAXY_SHAPE_SPIRAL_2_DESC: "§I$spiral_2$:§! This galaxy has two arms curving out from the galactic core."
+ GALAXY_SHAPE_SPIRAL_3_DESC: "§I$spiral_3$:§! This galaxy has three arms curving out from the galactic core."
+ GALAXY_SHAPE_SPIRAL_4_DESC: "§I$spiral_4$:§! This galaxy has four arms curving out from the galactic core."
+ GALAXY_SHAPE_SPIRAL_6_DESC: "§I$spiral_6$:§! This galaxy has six arms curving out from the galactic core."
+ GALAXY_SHAPE_BAR_DESC: "§I$bar$:§! The galaxy is split into two thick spiral arms, with only a few connections."
+ GALAXY_SHAPE_STARBURST_DESC: "§I$starburst$:§! Several parallel arms whirl out from the galactic core."
+ GALAXY_SHAPE_CARTWHEEL_DESC: "§I$cartwheel$:§! Several thin arms create this hybrid between a spiral and ring galaxy."
+ GALAXY_SHAPE_SPOKED_DESC: "§I$spoked$:§! This galaxy is split into 'slices' that are mostly separated from one another."
  GALAXY_SIZE:0 "ขนาดกาแล็กซี"
  TEMPLATE_NUM_STARS:0 " ($STARS$ ดวง)"
  RANDOMIZED_SETTING_NUM:0 "$MIN$-$MAX$"
@@ -5696,6 +5710,7 @@
  SHIP_STAT_MINERAL_MAINTENENCE:2 "ค่าบำรุงรักษา"
  SHIP_STAT_ENERGY_MAINTENENCE:2 "ค่าบำรุงรักษา"
  SHIP_STAT_POWER_USAGE:1 "พลังงาน"
+ SHIP_STAT_RARITY_USAGE: "ความหายาก"
  SHIP_STAT_HITPOINTS:1 "HP"
  SHIP_STAT_ARMOR:1 "เกราะ"
  SHIP_STAT_SHIELDS:1 "โล่พลังงาน"
@@ -5914,7 +5929,7 @@
  RULER_CLASS:0 "ประเภทผู้นำ"
  RULER_CLASS_SPINNER:0 "§H$RULER_CLASS$§!\nThe §H$RULER_CLASS$§! determines which §H$TRAITS$§! are available for your ruler. When they are no longer ruler, it decides which position the leader can be assigned to."
  RULER_SELECTED_TRAITS:0 "คุณลักษณะที่เลือก"
- GOVERNMENT_VIEW:0 "หน้าต่างการปกครองหรือรัฐบาล"
+ GOVERNMENT_VIEW:0 "หน้าต่างจักรวรรดิ"
  RULER_TRAITS:0 "คุณลักษณะผู้ปกครอง:"
  EMPIRE:0 "จักรวรรดิ"
  PRIMITIVE_TYPE:1 "Pre-FTL"
@@ -6103,9 +6118,11 @@
  TECH_UNLOCK_COLONIZATION:0 "§Hปลดล็อกการตั้งอาณานิคม:§! $LIST$"
  TECH_UNLOCK_ARMY:0 "§Hปลดล็อกกองทัพ:§! $NAME$"
  TECH_UNLOCK_BUILDING:0 "§Hปลดล็อกสิ่งปลูกสร้าง:§! $NAME$"
+ TECH_UNLOCK_BUILDING_CONCEPT: "$t$- §Yปลดล็อกสิ่งปลูกสร้าง:§! $NAME$"
  TECH_UNLOCK_DISTRICT:0 "§Hปลดล็อกเขต:§! $NAME$"
  TECH_UNLOCK_BUILDABLE_POP:0 "§Hปลดล็อกประชากรที่สร้างขึ้นมาได้:§! $NAME$"
  TECH_UNLOCK_FEATURE:0 "§Hปลดล็อกคุณสมบัติ:§! $NAME$ (เทคโนโลยี)"
+ TECH_UNLOCK_FEATURE_CONCEPT: "$t$- §Yปลดล็อกคุณสมบัติ:§! $NAME$"
  TECH_UNLOCK_EDICT:0 "§Hปลดล็อกประกาศคำสั่ง:§! $NAME$"
  TECH_UNLOCK_DECISION:0 "§Hปลดล็อกการตัดสินใจ:§! $NAME$"
  TECH_UNLOCK_PLANETARY_EDICT:0 "§Hปลดล็อกประกาศคำสั่งของดาวเคราะห์:§! $NAME$"
@@ -6403,7 +6420,7 @@
  SHOW_SAPIENT:0 "แสดงเผ่าพันธุ์ก่อนเซเปียนส์"
  MY_EMPIRE:0 "จักรวรรดิเรา"
  ALL_GALAXY:0 "กาแล็กซี"
- GOTO_CAPITALPLANET_GP:0 "§HGo to Capital Planet§!"
+ GOTO_CAPITALPLANET_GP:0 "§Hไปที่ดาวเคราะห์ศูนย์กลางจักรวรรดิ§!"
  GOTO_HOMEPLANET_GP:0 "§Hไปที่ดาวบ้านเกิด§!"
  GOTO_HOMEPLANET:0 "§Hไปที่ดาวบ้านเกิด§!\n§Gคลิกเพื่อไปยังตำแหน่งดาวบ้านเกิดของเราอย่างรวดเร็ว§!"
  NA_GOTO_HOMEPLANET:0 "§HGo To§!\n§RThis planet's location is unknown.§!"
@@ -7040,7 +7057,7 @@
  CURRENT_LEADER:0 "ผู้นำปัจจุบัน"
  NEXT_LEADER:0 "ผู้นำคนต่อไป"
  MEMBERS:0 "สมาชิก"
- NEXT_ROTATION:0 "การหมุนเวียนครั้งต่อ"
+ NEXT_ROTATION:0 "การหมุนเวียนครั้งต่อไป"
  ELECTION_VIEW_TITLE:0 "การเลือกผู้ปกครอง"
  ELECTION_VIEW_DESCRIPTION:4 "การเลือกตั้ง $RULER_TITLE|Y$ ใหม่กำลังดำเนินการอยู่!\nใช้ £unity£§Yเอกภาพ§! เพื่อเลือกผู้สมัครคนใดคนหนึ่ง"
  ELECTION_VIEW_DESCRIPTION_RANDOM:0 "$ELECTION_VIEW_DESCRIPTION$ If we do not interfere, a random candidate will be elected."
@@ -7060,11 +7077,11 @@
  ELECTIONS_ON_RULER_DEATH:0 "§Hเลือกตั้งเมื่อผู้ปกครองเสียชีวิตแล้วเท่านั้น§!"
  NEXT_ELECTION_LABEL_VARIANCE: "$DATE|H$ $DOUBLE_NEW_LINE$ความถี่ในการเลือกตั้ง: $NEW_LINE$§Hระหว่าง $FREQUENCY_MIN|0H$ ถึง $FREQUENCY_MAX|0H$ ปี§!"
  NEXT_ELECTION_LABEL_NO_VARIANCE: "$DATE|H$ $DOUBLE_NEW_LINE$ความถี่ในการเลือกตั้ง: $NEW_LINE$§Hทุกๆ $FREQUENCY|0H$ ปี§!"
- EMERGENCY_ELECTION_TOOLTIP:2 "§HEmergency Election§!\nSpend $COST|Y0$ to immediately hold an Election."
- COST_SCALES_WITH_SPRAWL_DELAYED:0 "§EThis cost scales with §H$EMPIRE_SIZE$§!.§!"
- EMERGENCY_ELECTION_BAD_GOVERNMENT_TYPE:0 "Our Government type does not support Emergency Elections"
- EMERGENCY_ELECTION_CANT_AFFORD:0 "We can not afford this!"
- ELECTION_ALREADY_ONGOING:0 "There is already an ongoing Election!"
+ EMERGENCY_ELECTION_TOOLTIP:2 "§Hการเลือกตั้งฉุกเฉิน§!\nใช้ $COST|Y0$ เพื่อดำเนินการจัดการเลือกตั้งทันที"
+ COST_SCALES_WITH_SPRAWL_DELAYED:0 "§Eค่าใช้จ่ายนี้จะเปลี่ยนตาม §H$EMPIRE_SIZE$§!§!"
+ EMERGENCY_ELECTION_BAD_GOVERNMENT_TYPE:0 "การปกครองของเราไม่สนับสนุนการเลือกตั้งฉุกเฉิน"
+ EMERGENCY_ELECTION_CANT_AFFORD:0 "เราไม่สามารถใช้ได้!"
+ ELECTION_ALREADY_ONGOING:0 "เลือกตั้งแล้ว!"
  EMERGENCY_ELECTION_TITLE:0 "§Hการเลือกตั้งฉุกเฉิน§!"
  DEMOCRATIC_ELECTION_TITLE:0 "§Hภาพรวมการเลือกตั้ง§!"
  DEMOCRATIC_ELECTION_DESC:1 "The Election Overview displays all active candidates as well as their factions and current support.\n§GClick to open Election Overview§!"
@@ -7898,7 +7915,7 @@
  engineering_research:0 "การวิจัยวิศวกรรม"
  engineering_research_desc:4 "§E§Hการวิจัยวิศวกรรม§! (£engineering£) ใช้เพื่อวิจัยเทคโนโลยีใหม่ๆ$tt_research_gain$§!"
  unity:0 "เอกภาพ"
- unity_desc_start: "§E§H$unity$§! (£unity£) ใช้เพื่อปลดล็อก §Hวัฒนธรรม§!, จ้าง §Hผู้นำ§!, และ ออกกฎหมาย §Hประกาศคำสั่ง§! ใหม่ๆ$tt_gain$§Y-§! สร้าง"
+ unity_desc_start: "§E§H$unity$§! (£unity£) ใช้เพื่อปลดล็อก §Hวัฒนธรรม§!, จ้าง §Hผู้นำ§!, ยกระดับ §Hดาวเคราะห์§! และ ออกกฎหมาย §Hประกาศคำสั่ง§! ใหม่ๆ$tt_gain$§Y-§! สร้าง"
  unity_desc_end: "$tt_colonies$, หรือสิ่งปลูกสร้างอื่นๆ ที่มี £job£ §Hงาน§! ที่ผลิต §Hเอกภาพ§!§!"
  unity_desc:4 "$unity_desc_start$ £building£ §H$building_autochthon_monument_plural$§! $unity_desc_end$"
  unity_desc_hive_mind: "$unity_desc_start$ £building£ §H$building_hive_node$§! $unity_desc_end$"
@@ -9325,6 +9342,7 @@
  FIRE_CONTROL_1_DESC:0 "By installing an auxiliary fire-control system our ships can afford to make more advanced calculations, increasing accuracy."
  AUTO_REPAIR:0 "ซ่อมตัวยานใหม่อัตโนมัติ"
  AUTO_REPAIR_DESC:0 "These bacteria are imprinted with the ship's structural design and will attempt to restore hull integrity should it be compromised."
+ BIO_AUTO_REPAIR: "$AUTO_REPAIR$"
  PSI_SHIELD:0 "โล่พลังจิต"
  PSI_SHIELD_DESC:0 "$tech_psionic_shield_desc$"
  PSI_BARRIER:0 "บาเรียพลังจิต"
@@ -9353,6 +9371,18 @@
  SMALL_CRYSTAL_ARMOR_2:0 "$CRYSTAL_ARMOR_2$ เล็ก"
  MEDIUM_CRYSTAL_ARMOR_2:0 "$CRYSTAL_ARMOR_2$ กลาง"
  LARGE_CRYSTAL_ARMOR_2:0 "$CRYSTAL_ARMOR_2$ ใหญ่"
+ CRYSTAL_ARMOR_1_BIO: "$CRYSTAL_ARMOR_1$"
+ CRYSTAL_ARMOR_1_BIO_DESC: "$CRYSTAL_ARMOR_1_DESC$"
+ CRYSTAL_ARMOR_2_BIO: "$CRYSTAL_ARMOR_2$"
+ CRYSTAL_ARMOR_2_BIO_DESC: "$CRYSTAL_ARMOR_2_DESC$"
+ SMALL_CRYSTAL_ARMOR_1_BIO: "$SMALL_CRYSTAL_ARMOR_1$"
+ MEDIUM_CRYSTAL_ARMOR_1_BIO: "$MEDIUM_CRYSTAL_ARMOR_1$"
+ LARGE_CRYSTAL_ARMOR_1_BIO: "$LARGE_CRYSTAL_ARMOR_1$"
+ SMALL_CRYSTAL_ARMOR_2_BIO: "$SMALL_CRYSTAL_ARMOR_2$"
+ MEDIUM_CRYSTAL_ARMOR_2_BIO: "$MEDIUM_CRYSTAL_ARMOR_2$"
+ LARGE_CRYSTAL_ARMOR_2_BIO: "$LARGE_CRYSTAL_ARMOR_2$"
+ SPACE_WHALE_WEAPON_BIO: "$SPACE_WHALE_WEAPON$"
+ SPACE_WHALE_WEAPON_BIO_DESC: "$SPACE_WHALE_WEAPON_DESC$"
  SHIP_THRUSTER_1:0 "ระบบขับดันเคมี"
  SHIP_THRUSTER_1_DESC:0 "Simple yet moderately effective chemical thrusters that rely on combustible propellant to generate thrust."
  DESTROYER_SHIP_THRUSTER_1:0 "$SHIP_THRUSTER_1$"
@@ -9485,6 +9515,12 @@
  STRIKE_CRAFT_HANGAR_3_DESC:0 "$tech_strike_craft_3_desc$"
  SPACE_WHALE_WEAPON_1:0 "พลังไซฟอน"
  SPACE_WHALE_WEAPON_1_DESC:2 "Modeled after a peculiar biological process observed in the Tiyanki, the Energy Siphon excites the energy transfer medium of targeted enemy vessels."
+ SPACE_WHALE_WEAPON_2: "$SPACE_WHALE_WEAPON_1$"
+ SPACE_WHALE_WEAPON_2_DESC: "$SPACE_WHALE_WEAPON_1_DESC$"
+ SPACE_WHALE_WEAPON_3: "$SPACE_WHALE_WEAPON_1$"
+ SPACE_WHALE_WEAPON_3_DESC: "$SPACE_WHALE_WEAPON_1_DESC$"
+ SPACE_WHALE_WEAPON_4: "$SPACE_WHALE_WEAPON_1$"
+ SPACE_WHALE_WEAPON_4_DESC: "$SPACE_WHALE_WEAPON_1_DESC$"
  SMALL_RED_LASER:0 "เลเซอร์แดง (เล็ก)"
  MEDIUM_RED_LASER:0 "เลเซอร์แดง (กลาง)"
  LARGE_RED_LASER:0 "เลเซอร์แดง (ใหญ่)"
@@ -12045,6 +12081,7 @@
  BYPASS_DESC_UNKNOWN_WORMHOLE:0 "We have never seen this type of natural formation before"
  BYPASS_DESC_UNKNOWN_GATEWAY:0 "We have never seen this type of construction before"
  BYPASS_DESC_INACTIVE_GATEWAY:0 "ต้องเปิดใช้งานโดยการอัปเกรด §Yเกตเวย์§!"
+ BYPASS_DESC_INACTIVE_GATEWAY_NESS: "$BYPASS_DESC_INACTIVE_GATEWAY$"
  BYPASS_DESC_INACTIVE_WORMHOLE:0 "ต้องเปิดใช้งาน"
  BYPASS_DESC_UNEXPLORED:0 "ต้องมีการสำรวจ"
  BYPASS_DESC_MANY_CONNECTIONS:0 "$TYPE|Y$ นี้เชื่อมต่อกับเครือข่าย $TYPE$ โดยสมบูรณ์"
@@ -12053,7 +12090,7 @@
  BYPASS_DESC_CLICK_TO_FOCUS:0 "คลิกเพื่อโฟกัสที่อีกด้าน"
  EXPLORE_BYPASS_INACTIVE:0 "$BYPASS$ has not been activated."
  TRIGGER_TEST:0 "$CONDITION$ $TEXT$"
- PATCHNOTES:17 "§HClick§! to go to the Stellaris Wiki to read the full patch notes for 3.13"
+ PATCHNOTES:18 "§HClick§! to go to the Stellaris Wiki to read the full patch notes for 3.14"
  sys_unsurveyed:0 "ยังไม่ได้สำรวจระบบโดยละเอียด"
  sys_unclaimed:0 "ระบบที่ไม่มีการอ้างสิทธิ์"
  sys_unknown:0 "ระบบที่ไม่รู้จัก"
@@ -12402,8 +12439,22 @@
  RESYNC_OOS: "Resync"
  RESYNC_OOS_TOOLTIP_SERVER: "Send a resync request to all players"
  RESYNC_OOS_TOOLTIP_CLIENT: "Wait for the server to send a resync request"
- MOD_VERSION:0 "Mod v0.74.2, Update 26/10/2024"
- MOD_DEV_MSG:0 "ผู้พัฒนา: §R*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่ง หากมีการเปลี่ยนแปลงคำสำคัญจะแจ้งให้ทราบอีกครั้ง§!\n\n§Bคำที่เปลี่ยนมีดังนี้:\n - Cosmic Storm -> พายุคอสมิก,พายุอวกาศ \n§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1.DLC ที่รองรับ§! :  Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars, Ancient Relics, Galactic Paragons, Overlord, The Machine Age \n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, อาจวรงค์ จันทมาศ, Matrix Explained, Kurzgesagt, ZogZag Story, TechOffside, One To Many - A Brief Science\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, 2001: A Space Odyssey, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator, All Tomorrows\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
+ DLC_START:0 "DLC"
+ OWN_DLC:0 "คุณเป็นเจ้าของ DLC นี้"
+ REQUIRES_DLC_WITH_NAME:0 "§Rต้องการ DLC $DLC$§!"
+ DISABLED_DLC:0 "DLC นี้ถูกปิดใช้งาน"
+ NOT_OWN_DLC:0 "คุณ §Rไม่ได้§! เป็นเจ้าของ DLC นี้"
+ CLICK_FOR_DLC_INFO:1 "§Gคลิกเพื่อเรียนรู้เพิ่มเติม§!"
+ NUM_LOCKED_PORTRAITS:1 "Show $NUM$ additional portraits"
+ VIEW_IN_STORE:0 "ดูในร้านค้า"
+ RECOMMENDED_DLCS:1 "DLC ที่แนะนำ"
+ STAR_SYSTEM_IS:0 "ระบบดาวคือ §Y$STAR_SYSTEM$§!"
+ STAR_SYSTEM_IS_NOT:0 "ระบบดาวไม่ใช่ §T$STAR_SYSTEM$§!"
+ USING_NAME_LIST:0 "ใช้รายชื่อหมวดหมู่ §Y$CATEGORY$§!"
+ NOT_USING_NAME_LIST:0 "ไม่ใช้รายชื่อหมวดหมู่ §Y$CATEGORY$§!"
+ HIDE_UNOWNED_CONTENT:0 "ซ่อน Content ที่ไม่ได้เป็นเจ้าของ"
+ MOD_VERSION:0 "Mod v0.75.0, Update 02/11/2024"
+ MOD_DEV_MSG:0 "ผู้พัฒนา: §R*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่ง หากมีการเปลี่ยนแปลงคำสำคัญจะแจ้งให้ทราบอีกครั้ง§!\n\n§Bคำที่เปลี่ยนมีดังนี้:\n - Cosmic Storm -> พายุคอสมิก,พายุอวกาศ \n§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1.DLC ที่รองรับ§! :  Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars, Ancient Relics, Galactic Paragons, Overlord, The Machine Age, Cosmic Storms \n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, อาจวรงค์ จันทมาศ, Matrix Explained, Kurzgesagt, ZogZag Story, TechOffside, One To Many - A Brief Science\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, 2001: A Space Odyssey, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator, All Tomorrows\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
  MOD_SUPPORTERS:0 "ผู้สนับสนุน: n/a"
  MOD_TEST1DUMMY1:0 "dummy1"
  MOD_TEST2DUMMY2:0 "dummy2"
