--- a/mod/thmod/localisation/english/lithoids_l_english.yml
+++ b/mod/thmod/localisation/english/lithoids_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
+ LITHOIDS_TITLE: "Lithoids Species Pack"
  vo_lithoid_voice:0 "Lithoid"
  lithoid:0 "หิน"
  MESSAGE_TERRAVORE_CONSUME_WORLD_TITLE:0 "กินดาว"
