--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
+ MEGACORP_TITLE: "MegaCorp"
  BASE_JOB_INPUT:1 "ค่าบำรุงรักษาของงาน(โดยประมาณ): $RESOURCES$"
  BASE_JOB_OUTPUT:1 "ผลผลิตของงาน(โดยประมาณ): $RESOURCES$"
  PLANET_BUILDQUEUE_UP:0 "$STARBASE_BUILDQUEUE_UP$"
@@ -1556,6 +1557,7 @@
  mod_armies_cost_mult:0 "ค่าใช้จ่ายของทหารราบ"
  mod_planet_pops_upkeep_mult:0 "ค่าบำรุงรักษาประชากร"
  mod_deposit_blockers_cost_mult:0 "ค่าใช้จ่ายในการเคลียร์สิ่งกีดขวาง"
+ mod_starbase_constructions_produces_mult: "ทรัพยากรจากฐานอวกาศ"
  CONSUMER_GOODS_UPKEEP:0 "ค่าบำรุงรักษา £consumer_goods£ สำหรับ"
  mod_pop_category_rulers_consumer_goods_upkeep_add:0 "$CONSUMER_GOODS_UPKEEP$ $RULERS$"
  mod_pop_category_specialists_consumer_goods_upkeep_add:0 "$CONSUMER_GOODS_UPKEEP$ $SPECIALISTS$"
@@ -1689,11 +1691,13 @@
  mod_planet_metallurgists_sr_living_metal_produces_add: "£sr_living_metal£ $sr_living_metal$ จาก £job_foundry£ §Y[GetAlloyProducerPlural]§!"
  mod_planet_metallurgists_energy_upkeep_add:0 "£energy£ $energy$ ที่เป็นค่าบำรุงรักษาของ £job_foundry£ [GetAlloyProducerPlural]"
  mod_planet_metallurgists_minerals_upkeep_add:0 "£minerals£ $minerals$ ที่เป็นค่าบำรุงรักษาของ £job_foundry£ [GetAlloyProducerPlural]"
+ mod_planet_metallurgists_minerals_upkeep_mult: "$mod_planet_metallurgists_minerals_upkeep_add$"
  mod_planet_metallurgists_food_upkeep_add:0 "£food£ $food$ ที่เป็นค่าบำรุงรักษาของ £job_foundry£ [GetAlloyProducerPlural]"
  mod_planet_artisans_consumer_goods_produces_mult:2 "£consumer_goods£ $consumer_goods$ จาก [GetArtisanIcon] [GetArtisanPlural]"
  mod_planet_artisans_consumer_goods_produces_add:0 "$mod_planet_artisans_consumer_goods_produces_mult$"
  mod_planet_artisans_energy_upkeep_add:1 "£energy£ $energy$ ที่เป็นค่าบำรุงรักษาของ [GetArtisanIcon] [GetArtisanPlural]"
  mod_planet_artisans_minerals_upkeep_add:1 "£minerals£ $minerals$ ที่เป็นค่าบำรุงรักษาของ [GetArtisanIcon] [GetArtisanPlural]"
+ mod_planet_artisans_minerals_upkeep_mult: "$mod_planet_artisans_minerals_upkeep_add$"
  mod_planet_farmers_food_produces_mult:1 "£food£ $food$จาก £job_farmer£ [GetFarmerPlural]"
  mod_planet_farmers_food_produces_add:0 "$mod_planet_farmers_food_produces_mult$"
  mod_planet_farmers_unity_produces_mult:1 "£unity£ $unity$จาก £job_farmer£ [GetFarmerPlural]"
@@ -3299,7 +3303,7 @@
  fleet1dealdesc1:0 "We offer you [Root.GetFleet1DealProduct]\n\nAll this for the low, low price of [Root.GetFleet1DealCost]\n\n[Root.GetFleet1DealProductAddendum]"
  cara_fleet1_deal:0 "แสดงสินค้าของคุณให้เราดู"
  cara_fleet1_take_deal:0 "ตกลง"
- cara_fleet1_take_deal.tooltip:0 "cara_fleet1_deal.tooltip"
+ cara_fleet1_take_deal_fail.tooltip:0 "§RNo available $SCIENCE_SHIP$§!"
  cara_fleet1_dealtaken:0 "Pleasure doing business with you. And remember: don't dream it, be it!"
  cost_500energy:0 "เครดิตพลังงาน: £energy£ §R-500§!"
  cost_1cruiser:0 "[Root.GetAdj] Cruisers: £military_ship£ §R-1§!"
@@ -3330,7 +3334,7 @@
  fleet1cost3:0 "£unity£ §R500§! $unity$! The mechanical process of zeitgeist absorption is poorly understood and can be unnerving, but it is completely harmless."
  fleet1cost4:0 "§Rsix months of§! £society£ $society_research$! How do you do the things you do? We intend to find out."
  fleet1cost5:1 "£science_ship£ §R1§! §HScience Ship§!! Excluding the crew. We don't need them, no."
- fleet1dealcost5_tooltip:0 "£science_ship£ §R-1§! $science_ship$\n(Science Officer will be reassigned.)"
+ fleet1dealcost5_tooltip:0 "£science_ship£ §R-1§! $SCIENCE_SHIP$\n(Science Officer will be reassigned.)"
  fleet1cost6:1 "§R-2§!§H$pop$§! £pop£ Pops! Any kind of Pop will do, really. Exciting medical development opportunities await them! We've recently expanded into recruitment services, you see."
  fleet1cost6_tooltip:1 "§R-2§! §H$pop$§! £pop£ Pops"
  cara_deal_expired.tooltip:0 "$TRIGGER_FAIL$§RThis deal has expired. Sorry!§!"
