--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -100,6 +100,8 @@
  MOD_COUNTRY_SUBJECT_ACCEPTANCE_ADD:0 "การยอมรับการเป็นเมืองขึ้น/บริวาร"
  MOD_MONTHLY_LOYALTY_GAIN:0 "การเปลี่ยนแปลงความภักดีรายเดือน"
  MOD_MONTHLY_LOYALTY_GAIN_FROM_SUBJECTS:0 "ความภักดีต่อเดือนจากจักรวรรดิบริวาร"
+ MOD_MONTHLY_LOYALTY_GAIN_FROM_SYNTHETIC_SUBJECTS: "ความภักดีต่อเดือนจากจักรวรรดิบริวาร (จักรกลสังเคราะห์)"
+ MOD_MONTHLY_LOYALTY_GAIN_FROM_ORGANIC_SUBJECTS: "ความภักดีต่อเดือนจากจักรวรรดิบริวาร (สิ่งมีชีวิต)"
  MOD_COUNTRY_FACTION_INFLUENCE_MULT:0 "ได้รับอิทธิพลจากกลุ่มการเมือง"
  MOD_COUNTRY_FACTION_INFLUENCE_ADD:0 "อิทธิพลสูงสุดที่ได้จากกลุ่มการเมือง"
  MOD_COUNTRY_CLEAR_BLOCKER_COST_MULT:0 "ค่าใช้จ่ายในการเคลียร์สิ่งกีดขวาง"
@@ -262,7 +264,8 @@
  MOD_POP_ENERGY_MULT:0 "$MOD_POP_ENERGY_ADD$"
  MOD_POP_MINERALS_ADD:0 "กำลังดำเนินการผลิตแร่"
  MOD_POP_MINERALS_MULT:0 "$MOD_POP_MINERALS_ADD$"
- MOD_FOUNDER_SPECIES_GROWTH_MULT: "['concept_founder_species_growth_mult']"
+ MOD_FOUNDER_SPECIES_GROWTH_MULT: "$concept_founder_species_growth_mult$"
+ MOD_FOUNDER_SPECIES_GROWTH_MULT_DESC: "$concept_founder_species_growth_mult_desc$"
  concept_founder_species_growth_mult: "ความเร็วในการเพิ่ม (หรือประกอบ) ประชากร"
  concept_founder_species_growth_mult_desc: "การปรับเปลี่ยนนี้ขึ้นอยู่กับเผ่าพันธุ์ผู้ก่อตั้งของจักรวรรดิคุณ $NEW_LINE$- เผ่าพันธุ์สิ่งมีชีวิต: §Y$MOD_POP_GROWTH_SPEED$§! $NEW_LINE$- เผ่าพันธุ์สิ่งมีชีวิตที่มีบุตรยาก: §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_MULT$§! $NEW_LINE$- เผ่าพันธุ์จักรกลหรือเครื่องจักร: §Y$MOD_PLANET_POP_ASSEMBLY_MULT$§!"
  MOD_SHIP_ARMOR_ADD:1 "HP เกราะ"
@@ -343,6 +346,7 @@
  MOD_SHIP_CLOAKING_STRENGTH_ADD:0 "พลังพรางตัว"
  MOD_SHIP_CLOAKING_DETECTION_ADD:0 "พลังตรวจจับ"
  MOD_SHIP_MILITARY_SPEED_MULT: "ความเร็วเคลื่อนที่ของยานรบที่ต่ำกว่าแสง"
+ MOD_SHIP_SCIENCE_SPEED_MULT: "ความเร็วเคลื่อนที่ของยานวิจัยวิทยาศาสตร์ที่ต่ำกว่าแสง"
  MOD_OWNED_SHIP_SPEED_MULT:0 "$MOD_SHIP_SPEED_MULT$"
  MOD_OWNED_SHIP_EVASION_MULT:0 "$MOD_SHIP_EVASION_MULT$"
  MOD_OWNED_SHIP_FIRE_RATE_MULT:0 "$MOD_SHIP_FIRE_RATE_MULT$"
