--- a/mod/thmod/localisation/english/name_lists/common_names_l_english.yml
+++ b/mod/thmod/localisation/english/name_lists/common_names_l_english.yml
@@ -30,7 +30,7 @@
  NAME_Koras:0 "Koras"
  NAME_Haradas:0 "Haradas"
  NAME_Islena:0 "Islena"
- NAME_Irreparable_Damage:0 "Irreparable Damage"
+ NAME_Irreparable_Damage:0 "Catastrophic Damage"
  NAME_The_Interloper:0 "The Interloper"
  NAME_Sky_Dragon:0 "Sky Dragon"
  NAME_Sky_Dragon_Baby:0 "Sky Dragon Fledgling"
