--- a/mod/thmod/localisation/english/technology_l_english.yml
+++ b/mod/thmod/localisation/english/technology_l_english.yml
@@ -825,8 +825,8 @@
  tech_transcendent_faith_desc:0 "Leaving our planetary cradle has opened us up to a new understanding of faith, and its place in a wider context."
  tech_alien_sanctuary:0 "การแปลงสัญชาติต่างดาว"
  tech_alien_sanctuary_desc:0 "The introduction of advanced naturalization centers will ensure that any newcomers to our empire are uniquely equipped to navigate their adoptive society, while preserving their native strengths."
- tech_amoeba_strike_craft_1:0 "โครงการเพาะพันธุ์อะมีบา"
- tech_amoeba_strike_craft_1_desc:1 "By breeding Space Amoebas in captivity, we can program their symbiotic flagella to act as organic strike craft for our navy."
+ tech_amoeba_strike_craft_1:1 "การใช้แฟลกเจลลาหรือแส้เป็นอาวุธ"
+ tech_amoeba_strike_craft_1_desc:2 "By altering the breeding process of Space Amoebas, we can program their symbiotic flagella to act as organic strike craft for our navy."
  tech_swarm_strike_craft_1:0 "เครื่องวางไข่แบบกลุ่ม"
  tech_swarm_strike_craft_1_desc:1 "Collecting specimens from defeated Prethoryn enables us to clone and genetically program a war-brood of our own."
  tech_scourge_missile_1:0 "มิสไซล์ Scourge"
