--- a/mod/thmod/localisation/english/traditions_l_english.yml
+++ b/mod/thmod/localisation/english/traditions_l_english.yml
@@ -936,4 +936,4 @@
  ap_organo_machine_interfacing_assimilator_desc:0 "ขีดจำกัดและข้อจำกัดที่กำหนดโดยผู้สร้างของเราเป็นสิ่งที่ยอมรับไม่ได้ เพื่อให้บรรลุศักยภาพสูงสุด เราต้องหลอมรวมสิ่งมีชีวิตและเครื่องจักรเข้าด้วยกัน"
  ap_mechromancy: "เมโครแมนเซอร์ (เครื่องจักรหมอผี)"
  ap_mechromancy_desc: "สิ่งมีชีวิตเป็นเพียงเครื่องจักรประเภทหนึ่งเท่านั้น เราสามารถกระตุ้นไซแนปส์ที่เหมาะสมและสร้างสิ่งมีชีวิตเหล่านี้ขึ้นมาใหม่เพื่อประโยชน์ของเรา"
- ap_mechromancy_tt:1 "- สิ่งมีชีวิตลิไวธานที่ถูกกำจัดสามารถฟื้นคืนชีพได้เป็นบางครั้ง\n- $pops_with_icon$สิ่งมีชีวิตทรงภูมิปัญญาหรือ Lithoid ที่ถูกกวาดล้าง มีโอกาส 33% ที่จะฟื้นคืนชีพเป็นไซบอร์กซอมบี้ได้"
+ ap_mechromancy_tt:1 "- สิ่งมีชีวิตลิไวธานที่ถูกกำจัดสามารถฟื้นคืนชีพได้เป็นบางครั้ง\n- $pops_with_icon$สิ่งมีชีวิตทรงภูมิปัญญาหรือ Lithoid ที่ถูกกวาดล้าง มีโอกาส 33% ที่จะฟื้นคืนชีพเป็นไซบอร์กซอมบี้ได้\n- $reanimator_effect_desc$"
