--- a/mod/thmod/localisation/english/arcsite_events_l_english.yml
+++ b/mod/thmod/localisation/english/arcsite_events_l_english.yml
@@ -76,7 +76,7 @@
  site_debris_belt_desc:0 "Our scans of the [From.Planet.System.GetName] system show that its asteroid belt is of an unusual variety. Instead of the standard mix of rocks, ice and space rubble that usually make up such formations, it seems to be the remains of a number of large, artificial habitats. These must have been destroyed with incredible violence sometime in the last few millennia. Untold secrets may be contained within the resulting debris field, but it is so extensive that charting it out could take quite some time."
  r_odryskan_crystal:0 "Crystal of Odryskia"
  r_odryskan_crystal_desc:0 "A crystal of incalculable wealth. It is said that the value of even a single shard is enough to drive mortal minds to insanity."
- r_odryskan_crystal_regular_effect:0 "One of our scientists may gain the §YManiacal§! trait."
+ r_odryskan_crystal_regular_effect:0 "One of our scientists may gain the §Y$leader_trait_maniacal$§! trait."
  NAME_The_Cabin:0 "The Cabin"
  arcsite.2500.name:0 "The Cabin"
  arcsite.2500.desc:0 "We are not the first to discover the debris belt in the §Y[From.Planet.System.GetName]§! system: a craft - so small that our [Root.Owner.GetResearchers] are dubbing it a "space cabin" - has been found, containing the remains of a single toxoid alien and a considerable number of data crystals. Judging by the rate of decay, our best guess is that this alien expired only a few centuries ago."
