--- a/mod/thmod/localisation/english/first_contact_l_english.yml
+++ b/mod/thmod/localisation/english/first_contact_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
+ FIRST_CONTACT_TITLE: "First Contact Story Pack"
  NAME_MSI_country:0 "Minamar Specialized Industries"
  NAME_MSI_country_initials:0 "MSI"
  NAME_MSI_species:0 "Olinbar"
