--- a/mod/thmod/localisation/english/name_lists/initializers_names_l_english.yml
+++ b/mod/thmod/localisation/english/name_lists/initializers_names_l_english.yml
@@ -255,6 +255,7 @@
  NAME_Tiyanki_Bull:0 "Tiyanki Bull"
  NAME_Tiyanki_Cow:0 "Tiyanki Cow"
  NAME_Tiyanki_Hatchling:0 "Tiyanki Hatchling"
+ NAME_Tiyanki_Ox: "Tiyanki Ox"
  NAME_Tiyana_Vek:0 "Tiyana Vek"
  NAME_Zathika_Mev:0 "Zathika Mev"
  NAME_Surribzha:0 "Surrib'Zha"
