--- a/mod/thmod/localisation/english/necroids_l_english.yml
+++ b/mod/thmod/localisation/english/necroids_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
+ NECROIDS_TITLE: "Necroids Species Pack"
  origin_necrophage:0 "ผีดิบเนโครเฟจ"
  origin_necrophage_desc:1 "This civilization evolved as a parasite, forced to feed off other sapient life forms to sustain itself. As it arrives on the galactic stage, other species will either be brought into the fold, or become its food. For the necrophage, there can be no other way."
  origin_tooltip_necrophage_effects:3 "- $HOMEWORLD$ ['concept_necrophage_elevation_chamber'] $NEW_LINE$- $SPECIES_TRAITS$ ['concept_necrophage_trait'] $NEW_LINE$- £pop£ §Iประชากรเผ่าพันธุ์รอง§! (ที่จะกลายเป็นเนโครเฟจ) : 12 $NEW_LINE$- ['concept_guaranteed_colonies']: ถูกแทนที่ด้วย ['concept_preftl_civilizations']"
@@ -150,7 +151,7 @@
  civic_reanimated_armies:1 "ผู้ฟื้นคืนชีพศพ"
  civic_reanimated_armies_desc:1 "Within this society, death is no bar to the call to arms. Masters of the art of necromancy reanimate corpses to raise dread hosts and guardians, striking fear into the hearts of lesser mortals."
  disabled_by_synthetic_ascension:0 "Incompatible with §YSynthetic Ascension§!"
- civic_tooltip_reanimated_armies_effects:3 "สามารถสร้าง £building£ §Yค่ายที่พักที่น่ากลัว§! ที่จะอนุญาตให้มีงาน £job_necromancer£ §Yเนโครแมนเซอร์§! และอนุญาตให้มีการคัดเลือก §Yกองทัพผีดิบ§!\n$job_necromancer_effect_desc$\nให้สิทธิ์การเข้าถึงสิ่งปลูกสร้าง £building£ §Y$holding_dread_outpost$§!\nกองทัพสิ่งมีชีวิตที่ถูกกำจัดจะถูกทำให้ฟื้นคืนชีพเป็น §Yกองทัพผีดิบ§!\nสิ่งมีชีวิตลิไวธานที่ถูกกำจัดสามารถฟื้นคืนชีพได้เป็นบางครั้ง"
+ civic_tooltip_reanimated_armies_effects:3 "สามารถสร้าง £building£ §Yค่ายที่พักที่น่ากลัว§! ที่จะอนุญาตให้มีงาน £job_necromancer£ §Yเนโครแมนเซอร์§! และอนุญาตให้มีการคัดเลือก §Yกองทัพผีดิบ§!\n$job_necromancer_effect_desc$\nให้สิทธิ์การเข้าถึงสิ่งปลูกสร้าง £building£ §Y$holding_dread_outpost$§!\nกองทัพสิ่งมีชีวิตที่ถูกกำจัดจะถูกทำให้ฟื้นคืนชีพเป็น §Yกองทัพผีดิบ§!\nสิ่งมีชีวิตลิไวธานที่ถูกกำจัดสามารถฟื้นคืนชีพได้เป็นบางครั้ง\n$reanimator_effect_desc$"
  building_dread_encampment:0 "ค่ายที่พักที่น่ากลัว"
  building_dread_encampment_desc:2 "It is best to shield the activities of the necromancers from the tender view of the public as they raise undead hordes to fight in our armies."
  job_necromancer_effect_desc:3 "£job_necromancer£ $job_necromancer_plural$ เปลี่ยน £consumer_goods£ §Y$consumer_goods$§! เป็น £physics£ £society£ §Yแต้มการวิจัย§! และ £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§! พร้อมทั้ง £defense_army£ §Yกองทัพป้องกัน(กองทัพผีดิบ)§!"
@@ -232,7 +233,7 @@
  action.62.memorialist.a:0 "They shall be remembered."
  civic_permanent_employment:0 "การจ้างงานแบบถาวร"
  civic_permanent_employment_desc:0 "This Megacorporation has ensured that its employees will never be out of a job. Ever. After the employee's time is up, they will be repurposed for simpler tasks so that they can still provide for their families and pay off their debts."
- civic_tooltip_permanent_employment_effects:3 "สามารถสร้าง £building£ §Y$building_posthumous_employment_center$§!\n$job_reassigner_effect_desc$\n\nให้สิทธิ์การเข้าถึงสิ่งปลูกสร้าง £building£ §Y$holding_reemployment_center$§!\n\nสิ่งมีชีวิตลิไวธานที่ถูกกำจัดสามารถฟื้นคืนชีพได้เป็นบางครั้ง"
+ civic_tooltip_permanent_employment_effects:3 "สามารถสร้าง £building£ §Y$building_posthumous_employment_center$§!\n$job_reassigner_effect_desc$\n\nให้สิทธิ์การเข้าถึงสิ่งปลูกสร้าง £building£ §Y$holding_reemployment_center$§!\n\nสิ่งมีชีวิตลิไวธานที่ถูกกำจัดสามารถฟื้นคืนชีพได้เป็นบางครั้ง\n\n$reanimator_effect_desc$"
  job_reassigner:0 "ผู้รับโอนสิทธิ์ใหม่"
  job_reassigner_desc:0 "Reassigners ensure that once a Megacorporation's citizen has passed on, their remains will stay at work until the fulfillment of their contract."
  job_reassigner_plural:0 "ผู้รับโอนสิทธิ์ใหม่"
@@ -255,7 +256,7 @@
  zombie_contract_manipulation_desc:0 "This empire fiddled with their zombie workers' contracts so that it's actually impossible to get out of debt."
  civic_hive_cordyceptic_drones:0 "โดรน Cordyceptic"
  civic_hive_cordyceptic_drones_desc:0 "Highly specialized drones capable of infecting simple hosts and issuing rudimentary commands make up the backbone of this hive's stellar defense."
- civic_tooltip_cordyceptic_drones:0 "- เริ่มเกมด้วย §G3§! §Hอะมีบาที่ถูกคืนชีพ§!\n- สิ่งมีชีวิตสัตว์อวกาศที่ถูกกำจัดจะถูกช่วยให้ฟื้นคืนชีพโดยอัตโนมัติ\n- สิ่งมีชีวิตลิไวธานที่ถูกกำจัดสามารถฟื้นคืนชีพได้เป็นบางครั้ง\n"
+ civic_tooltip_cordyceptic_drones:0 "- เริ่มเกมด้วย §G3§! §Hอะมีบาที่ถูกคืนชีพ§!\n- สิ่งมีชีวิตสัตว์อวกาศที่ถูกกำจัดจะถูกช่วยให้ฟื้นคืนชีพโดยอัตโนมัติ\n- สิ่งมีชีวิตลิไวธานที่ถูกกำจัดสามารถฟื้นคืนชีพได้เป็นบางครั้ง\n- $reanimator_effect_desc$\n- ได้รับ $genetic_material$ จากการฆ่าสัตว์อวกาศ\n"
  MESSAGE_REANIMATION_COMPLETE_TITLE:0 "Reanimation Complete"
  MESSAGE_REANIMATION_COMPLETE_TIYANKI_DESC:0 "A new batch of reanimated Tiyanki is ready for us in $SYSTEM|Y$. The next lot is already underway."
  MESSAGE_REANIMATION_AMOEBA_TIYANKI_DESC:0 "A new batch of reanimated Amoeba is ready for us in $SYSTEM|Y$. The next lot is already underway."
