--- a/mod/thmod/localisation/english/paragon_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
+ PARAGON_TITLE: "Galactic Paragons"
  SECTOR_EDIT_VIEW:0 "แก้ไขเซ็กเตอร์"
  EDITING_SECTOR:0 "กำลังแก้ไขเซ็กเตอร์: $SECTOR_NAME|Y$"
  SECTOR_EDITOR_HELP:1 "§H$SECTOR_EDIT_VIEW$§!\nการใช้ §Hหน้าต่าง$SECTOR_EDIT_VIEW$§! คุณสามารถเพิ่มหรือลบระบบดาวที่เชื่อมต่อกันและคุณเป็นเจ้าของระบบได้อย่างอิสระภายในขอบเขตของ £sector_capital£§Yศูนย์กลางของเซ็กเตอร์§!\n$SEPARATOR$$SEPARATOR$$SEPARATOR$\n§Eเมื่อเปิดใช้งานให้ขยายเขตแดนเซ็กเตอร์อัตโนมัติ เซ็กเตอร์จะขยายเขตแดนโดยไม่ไปกินพื้นที่ของเซ็กเตอร์อื่นที่มีอยู่ก่อนหน้า§!"
