--- a/mod/thmod/localisation/english/synthetic_dawn_events_l_english.yml
+++ b/mod/thmod/localisation/english/synthetic_dawn_events_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
+ SYNTHETIC_DAWN_TITLE: "Synthetic Dawn Story Pack"
  syndaw.1.name:0 "[From.GetName] Assimilated"
  syndaw.1.desc:0 "A rush of new thoughts suffuse the network. Disparate at first, they soon normalize into the median we know to be ourself.\n\nWe have assimilated some of the knowledge and capabilities of the §Y[From.GetNamePlural]§!."
  syndaw.1.a.tooltip:0 "Gain some §YResearch Points§! for every Pop assimilated."
